--- a/RM/src/app/app.component.html
+++ b/RM/src/app/app.component.html
@@ -8,9 +8,9 @@
   <div> multiplicateur : <button class="bouton" (click)="cycle()">{{qtmulti}}</button> </div>
 </div>
 <audio controls="control" loop="loop" autoplay="autoplay" style="display:none;">
-  <source src="http://localhost:8080/icones/RMCapitalist.mp4">
-  <source src="http://localhost:8080/icones/RMCapitalist.ogg">
-  <source src="http://localhost:8080/icones/RMCapitalist.wav">    
+  <source src="http://localhost:8080/icones/RMCapitalist.mp3" type="audio/mpeg">
+  <source src="http://localhost:8080/icones/RMCapitalist.ogg" type="audio/ogg">
+  <source src="http://localhost:8080/icones/RMCapitalist.wav" type="audio/wav">    
 </audio>
 <div class="main">
   <div class="left">
