--- a/RM/src/app/app.component.html
+++ b/RM/src/app/app.component.html
@@ -7,7 +7,7 @@
         src="http://localhost:8080/icones/picklerick.png" alt="Pickle Rick"></span> </div>
   <div> multiplicateur : <button class="bouton" (click)="cycle()">{{qtmulti}}</button> </div>
 </div>
-<audio controls="control" loop="loop" autoplay="autoplay" style="display:none;">
+<audio controls autoplay loop style="display:none;">
   <source src="http://localhost:8080/icones/RMCapitalist.mp3" type="audio/mpeg">
   <source src="http://localhost:8080/icones/RMCapitalist.ogg" type="audio/ogg">
   <source src="http://localhost:8080/icones/RMCapitalist.wav" type="audio/wav">    
